Add user authentication to the app

--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -15,6 +15,7 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -30,7 +31,10 @@ android {
         includeAndroidResources = true
         returnDefaultValues = true
     }
-
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
     //dataBinding {
     //    enabled = true
     //    enabledForTests = true
@@ -116,11 +120,15 @@ dependencies {
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$dexMakerVersion"
     androidTestImplementation('org.koin:koin-test:2.0.1') { exclude group: 'org.mockito' }
 
-
-
     //Maps & Geofencing
     implementation "com.google.android.gms:play-services-location:$playServicesVersion"
     implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
 
+    // Firebase dependencies
+    implementation platform('com.google.firebase:firebase-bom:29.0.1')
+    // Authentication
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+    implementation "com.google.android.gms:play-services-auth:$playServicesVersion"
 
 }
