--- a/starter/.gitignore
+++ b/starter/.gitignore
@@ -12,3 +12,9 @@
 /captures
 .externalNativeBuild
 .cxx
+/.idea/.name
+/.idea/vcs.xml
+/.idea/jarRepositories.xml
+/.idea/misc.xml
+/.idea/gradle.xml
+/.idea/compiler.xml
