--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -121,7 +121,7 @@ dependencies {
     androidTestImplementation('org.koin:koin-test:2.0.1') { exclude group: 'org.mockito' }
 
     //Maps & Geofencing
-    implementation "com.google.android.gms:play-services-location:$playServicesVersion"
+    implementation "com.google.android.gms:play-services-location:19.0.1"
     implementation "com.google.android.gms:play-services-maps:$playServicesVersion"
 
     // Firebase dependencies
