--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,6 @@
+.gradle/
+.idea/
+/*/build/
+local.properties
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
-/.idea/.name
-/.idea/vcs.xml
-/.idea/jarRepositories.xml
-/.idea/misc.xml
-/.idea/gradle.xml
-/.idea/compiler.xml
-/.idea/deploymentTargetDropDown.xml
