--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-.gradle/
+*.iml
+.gradle
 .idea/
 /*/build/
-local.properties
-*.iml
+/local.properties
 .DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
