--- a/build.gradle
+++ b/build.gradle
@@ -1,69 +1,56 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlinVersion = '1.3.72'
-    ext.navigationVersion = "2.2.0"
+    ext {
+        gradleVersion = '8.4.1'
+        kotlinVersion = '1.9.23'
+        navigationVersion = '2.7.7'
+
+        // Sdk and tools
+        // Support library and architecture components support minSdk 14 and above.
+        minSdkVersion = 24
+        targetSdkVersion = 33
+
+        // App dependencies
+        appCompatVersion = '1.7.0'
+        archLifecycleVersion = '2.2.0'
+        archLifecycleKtxVersion = '2.8.1'
+        materialVersion = '1.12.0'
+        mockitoVersion = '5.2.0'
+        constraintVersion = '2.1.4'
+        dexMakerVersion = '2.28.3'
+        coroutinesVersion = '1.6.4'
+        roomVersion = '2.6.1'
+        koinVersion = '3.4.0'
+        truthVersion = '1.1.3'
+        junitVersion = '4.13.2'
+        androidXTestCoreVersion = '1.5.0'
+        robolectricVersion = '4.3.1'
+        androidXTestExtKotlinRunnerVersion = '1.1.5'
+        archTestingVersion = '2.2.0'
+        androidXTestRulesVersion = '1.5.0'
+        espressoVersion = '3.5.1'
+        swipeRefreshVersion = '1.1.0'
+        fragmentTestingVersion = '1.7.1'
+        playServicesLocationVersion = '21.3.0'
+        playServicesMapsVersion = '18.1.0'
+        firebaseUiAuthVersion = '8.0.2'
+        firebaseAuthKtxVersion = '23.0.0'
+    }
 
     repositories {
         google()
-        jcenter()
         mavenCentral()
-
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath "com.android.tools.build:gradle:$gradleVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.gms:google-services:4.3.15'
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
-}
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-        mavenCentral()
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-ext {
-    // Sdk and tools
-    // Support library and architecture components support minSdk 14 and above.
-    minSdkVersion = 19
-    targetSdkVersion = 30
-    compileSdkVersion = 30
-
-    // App dependencies
-    androidXVersion = '1.0.0'
-    androidXAnnotations = '1.0.1'
-    androidXLegacySupport = '1.0.0'
-    appCompatVersion = '1.2.0'
-    archLifecycleVersion = '2.2.0'
-    cardVersion = '1.0.0'
-    materialVersion = '1.1.0'
-    fragmentVersion = '1.1.0-alpha07'
-    recyclerViewVersion = '1.1.0'
-    mockitoVersion = '2.8.9'
-    constraintVersion = '2.0.0-rc1'
-    dexMakerVersion = '2.28.4'
-    coroutinesVersion = '1.2.1'
-    roomVersion = '2.2.5'
-    koinVersion = '2.0.1'
-    truthVersion = '0.44'
-    junitVersion = '4.12'
-    androidXTestCoreVersion = '1.2.0-beta01'
-    robolectricVersion = '4.5-alpha-3'
-    androidXTestExtKotlinRunnerVersion = '1.1.1'
-    archTestingVersion = '2.0.0'
-    playServicesVersion = '18.0.2'
-    hamcrestVersion = '1.3'
-    androidXTestRulesVersion = '1.2.0-beta01'
-    espressoVersion = '3.2.0'
-
 }
