--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
     // Koin
     implementation "io.insert-koin:koin-android:$koinVersion"
-    androidTestImplementation("io.insert-koin:koin-test:3.1.6")
+    androidTestImplementation "io.insert-koin:koin-test:$koinVersion"
 
     // Dependencies for local unit tests
     testImplementation "junit:junit:$junitVersion"
